; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/isci/firmware/extr_create_fw.c_main.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/isci/firmware/extr_create_fw.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.isci_orom = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca %struct.isci_orom*, align 8
  store i32 0, i32* %1, align 4
  %4 = call %struct.isci_orom* @malloc(i32 4)
  store %struct.isci_orom* %4, %struct.isci_orom** %3, align 8
  %5 = load %struct.isci_orom*, %struct.isci_orom** %3, align 8
  %6 = call i32 @memset(%struct.isci_orom* %5, i32 0, i32 4)
  %7 = load %struct.isci_orom*, %struct.isci_orom** %3, align 8
  %8 = call i32 @set_binary_values(%struct.isci_orom* %7)
  %9 = load %struct.isci_orom*, %struct.isci_orom** %3, align 8
  %10 = call i32 @write_blob(%struct.isci_orom* %9)
  store i32 %10, i32* %2, align 4
  %11 = load i32, i32* %2, align 4
  %12 = icmp slt i32 %11, 0
  br i1 %12, label %13, label %17

13:                                               ; preds = %0
  %14 = load %struct.isci_orom*, %struct.isci_orom** %3, align 8
  %15 = call i32 @free(%struct.isci_orom* %14)
  %16 = load i32, i32* %2, align 4
  store i32 %16, i32* %1, align 4
  br label %20

17:                                               ; preds = %0
  %18 = load %struct.isci_orom*, %struct.isci_orom** %3, align 8
  %19 = call i32 @free(%struct.isci_orom* %18)
  store i32 0, i32* %1, align 4
  br label %20

20:                                               ; preds = %17, %13
  %21 = load i32, i32* %1, align 4
  ret i32 %21
}

declare dso_local %struct.isci_orom* @malloc(i32) #1

declare dso_local i32 @memset(%struct.isci_orom*, i32, i32) #1

declare dso_local i32 @set_binary_values(%struct.isci_orom*) #1

declare dso_local i32 @write_blob(%struct.isci_orom*) #1

declare dso_local i32 @free(%struct.isci_orom*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
